// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQBzQuBPhn7ZBGyfJon1nlzqk4L83mOm_Pq47fHucwcVCken"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQB5HT5Y8C_DCfrEVd7hwFTQ1ZEgJaGrqzC0MKuC6kd2y78G"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQDCMhBiphS6DwVjUGJSSZXnAKwuw2vzSQGTa404BA372O5w"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQBzQuBPhn7ZBGyfJon1nlzqk4L83mOm_Pq47fHucwcVCken",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15359n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBzQuBPhn7ZBGyfJon1nlzqk4L83mOm_Pq47fHucwcVCken",
            "to": "kQB5HT5Y8C_DCfrEVd7hwFTQ1ZEgJaGrqzC0MKuC6kd2y78G",
            "type": "internal",
            "value": "9.970524",
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBzQuBPhn7ZBGyfJon1nlzqk4L83mOm_Pq47fHucwcVCken",
          "to": "kQB5HT5Y8C_DCfrEVd7hwFTQ1ZEgJaGrqzC0MKuC6kd2y78G",
          "type": "internal",
          "value": "9.970524",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13880n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQB5HT5Y8C_DCfrEVd7hwFTQ1ZEgJaGrqzC0MKuC6kd2y78G",
            "to": "kQDCMhBiphS6DwVjUGJSSZXnAKwuw2vzSQGTa404BA372O5w",
            "type": "internal",
            "value": "9.946637",
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQB5HT5Y8C_DCfrEVd7hwFTQ1ZEgJaGrqzC0MKuC6kd2y78G",
          "to": "kQDCMhBiphS6DwVjUGJSSZXnAKwuw2vzSQGTa404BA372O5w",
          "type": "internal",
          "value": "9.946637",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13808n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDCMhBiphS6DwVjUGJSSZXnAKwuw2vzSQGTa404BA372O5w",
            "to": "kQDCMhBiphS6DwVjUGJSSZXnAKwuw2vzSQGTa404BA372O5w",
            "type": "internal",
            "value": "9.92301",
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDCMhBiphS6DwVjUGJSSZXnAKwuw2vzSQGTa404BA372O5w",
          "to": "kQDCMhBiphS6DwVjUGJSSZXnAKwuw2vzSQGTa404BA372O5w",
          "type": "internal",
          "value": "9.92301",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4360n,
      },
    ],
  },
]
`;
